# PyProjects

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: categories.yaml  fields.yaml
src/bill_organizer/: __init__.py  categorize.py  config.py  detect.py  flow.py  models.py  organize.py  text_extract.py
src/bill_organizer/crews/: __init__.py  extraction_crew.py
src/bill_organizer/crews/config/: agents.yaml  tasks.yaml
tests/: conftest.py  test_categorize.py  test_config.py  test_flow_integration.py  test_organize.py  test_text_extract.py
