[project]
name = "bill-organizer"
version = "0.1.0"
description = "Organize bills (PDF/image) from a drop folder into month/category folders and a per-month CSV."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm]>=0.80.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "pillow>=10.0",
    "python-dateutil>=2.9",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavier OCR engine -- significantly better on real-world receipts.
# Enable by setting OCR_ENGINE=paddle in .env after installing this extra.
paddle = [
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
]

[project.scripts]
bill-organizer = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bill_organizer"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
